Delete form tag and added logic to save the data from input

--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
         </nav>
 
         <section>
-            <form action="">
-                <input type="text" placeholder="add new product">
-                <button>add</button>
-            </form>
-
+            
+                <input type="text" placeholder="add new product" id="productinfo">
+                <button id="adder">add</button>
+            
             <table>
                 <tr>
                     <th>All Products</th>
@@ -77,5 +76,6 @@
             </table>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
